--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "flexible",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Flex Point usage analyzer",
   "private": true,
   "main": "format-data.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/eslint ./src/*.js",
     "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --open --config webpack.dev.js"
   },
@@ -23,6 +23,7 @@
     "highcharts": "^6.1.1"
   },
   "devDependencies": {
+    "eslint": "^5.4.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
