--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "flexible",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Flex Point usage analyzer",
   "private": true,
   "main": "format-data.js",
   "scripts": {
-    "test": "./node_modules/.bin/eslint ./src/*.js",
+    "test": "eslint ./src/*.js",
     "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --open --config webpack.dev.js"
   },
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/stephen-hannon/flexible#readme",
   "dependencies": {
-    "highcharts": "^6.1.1"
+    "highcharts": "^6.1.1",
+    "vue": "^2.5.17"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
