--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "flexible",
-  "version": "0.1.7",
+  "version": "1.0.0",
   "description": "Flex Point usage analyzer",
   "private": true,
   "main": "format-data.js",
   "scripts": {
-    "test": "eslint ./src/*.js",
-    "build": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --open --config webpack.dev.js"
+    "test": "eslint ./src/*.js"
   },
   "repository": {
     "type": "git",
@@ -20,14 +18,11 @@
   },
   "homepage": "https://github.com/stephen-hannon/flexible#readme",
   "dependencies": {
+    "dayjs": "^1.7.8",
     "highcharts": "^6.1.1",
     "vue": "^2.5.17"
   },
   "devDependencies": {
-    "eslint": "^5.4.0",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-merge": "^4.1.4"
+    "eslint": "^5.4.0"
   }
 }
