--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "format-data.js",
   "scripts": {
-    "test": "eslint ./src/*.js"
+    "test": "eslint ./docs/js/*.js"
   },
   "repository": {
     "type": "git",
