--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack --config ./build/webpack.prod.js",
     "build-dev": "webpack --config ./build/webpack.dev.js",
+    "build-scss": "sass ./src/style.scss ./dist/style.css",
     "start": "webpack-dev-server --open --config ./build/webpack.dev.js",
     "test": "eslint ./src/*.js"
   },
@@ -25,7 +26,12 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "sass": "^1.20.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1",
