--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexible",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Flex Point usage analyzer",
   "private": true,
   "scripts": {
@@ -26,6 +26,9 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -36,5 +39,8 @@
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1",
     "webpack-merge": "^4.2.1"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
