--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "mini-css-extract-plugin": "^0.7.0",
+    "postcss-loader": "^3.0.0",
     "sass": "^1.20.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
