--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "flexible",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Flex Point usage analyzer",
   "private": true,
+  "sideEffects": [
+    "*.css"
+  ],
   "scripts": {
     "build": "webpack --config ./build/webpack.prod.js",
     "build-dev": "webpack --config ./build/webpack.dev.js",
@@ -21,6 +24,9 @@
   },
   "homepage": "https://github.com/stephen-hannon/flexible#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "dayjs": "^1.8.14",
     "highcharts": "^6.2.0",
     "vue": "^2.6.10"
