--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: node_js
 node_js:
-  - "8"
+  - "10"
+
+cache: npm
 
 git:
   depth: 3
 
 before_script:
   - npm run build
+
+script:
+  - npm run lint
+  - npm test
 
 deploy:
   provider: pages
