--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Flex Point usage analyzer",
   "private": true,
   "sideEffects": [
-    "*.css"
+    "*.css",
+    "*.vue"
   ],
   "scripts": {
     "build:prod": "webpack --config ./build/webpack.prod.js",
