--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexible",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "description": "Flex Point usage analyzer",
   "private": true,
   "sideEffects": [
@@ -12,7 +12,7 @@
     "build:dev": "webpack --config ./build/webpack.dev.js",
     "build:scss": "sass ./src/scss/style.scss ./dist/style.css",
     "lint": "eslint src/ test/ --color",
-    "start": "webpack-dev-server --open --config ./build/webpack.dev.js",
+    "start": "webpack-dev-server --config ./build/webpack.dev.js",
     "test": "jest --verbose --color"
   },
   "repository": {
@@ -53,7 +53,8 @@
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "browserslist": [
     "defaults"
