--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexible",
-  "version": "1.3.9",
+  "version": "1.4.0",
   "description": "Flex Point usage analyzer",
   "private": true,
   "sideEffects": [
@@ -28,6 +28,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-regular-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "dayjs": "^1.8.14",
     "highcharts": "^7.1.2",
