--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexible",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Flex Point usage analyzer",
   "private": true,
   "sideEffects": [
@@ -43,6 +43,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "css-loader": "^2.1.1",
     "eslint": "^6.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "mini-css-extract-plugin": "^0.7.0",
     "postcss-loader": "^3.0.0",
