--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexible",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "description": "Flex Point usage analyzer",
   "private": true,
   "sideEffects": [
@@ -11,7 +11,7 @@
     "build:prod": "webpack --config ./build/webpack.prod.js",
     "build:dev": "webpack --config ./build/webpack.dev.js",
     "build:scss": "sass ./src/scss/style.scss ./dist/style.css",
-    "lint": "eslint src/ test/ --color",
+    "lint": "eslint --ext .js,.vue src/ test/ --color",
     "start": "webpack-dev-server --config ./build/webpack.dev.js",
     "test": "jest --verbose --color"
   },
@@ -45,6 +45,7 @@
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^2.1.1",
     "eslint": "^6.1.0",
+    "eslint-plugin-vue": "^5.2.3",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "mini-css-extract-plugin": "^0.7.0",
