--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexible",
-  "version": "1.4.5",
+  "version": "1.5.0",
   "description": "Flex Point usage analyzer",
   "private": true,
   "sideEffects": [
@@ -32,6 +32,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "dayjs": "^1.8.15",
     "highcharts": "^7.1.2",
+    "highcharts-vue": "^1.3.5",
     "vue": "^2.6.10"
   },
   "devDependencies": {
