--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexible",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Flex Point usage analyzer",
   "private": true,
   "sideEffects": [
@@ -30,7 +30,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.10.1",
     "@fortawesome/free-regular-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
-    "dayjs": "^1.8.15",
+    "date-fns": "^2.8.1",
     "highcharts": "^7.1.2",
     "highcharts-vue": "^1.3.5",
     "vue": "^2.6.10"
