--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexible",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Flex Point usage analyzer",
   "private": true,
   "sideEffects": [
@@ -8,11 +8,11 @@
     "*.vue"
   ],
   "scripts": {
-    "build:prod": "webpack --config ./build/webpack.prod.js",
-    "build:dev": "webpack --config ./build/webpack.dev.js",
+    "build:prod": "webpack --config ./build/webpack.config.prod.js",
+    "build:dev": "webpack --config ./build/webpack.config.dev.js",
     "build:scss": "sass ./src/scss/style.scss ./dist/style.css",
     "lint": "eslint --ext .js,.vue src/ test/ --color",
-    "start": "webpack-dev-server --config ./build/webpack.dev.js",
+    "start": "webpack-dev-server --config ./build/webpack.config.dev.js",
     "test": "jest --verbose --color"
   },
   "repository": {
@@ -26,40 +26,39 @@
   },
   "homepage": "https://github.com/stephen-hannon/flexible#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.21",
-    "@fortawesome/free-brands-svg-icons": "^5.10.1",
-    "@fortawesome/free-regular-svg-icons": "^5.10.1",
-    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "date-fns": "^2.8.1",
-    "highcharts": "^7.1.2",
+    "highcharts": "^8.0.0",
     "highcharts-vue": "^1.3.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "autoprefixer": "^9.6.1",
-    "babel-jest": "^24.8.0",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "autoprefixer": "^9.7.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^2.1.1",
-    "eslint": "^6.1.0",
-    "eslint-plugin-vue": "^5.2.3",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.1.2",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.8.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
-    "sass": "^1.22.9",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "vue-loader": "^15.7.1",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1",
+    "sass": "^1.24.0",
+    "sass-loader": "^8.0.0",
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2",
     "workbox-webpack-plugin": "^4.3.1"
   },
   "browserslist": [
